Switch iOS examples to Cocoapod
Change-Id: I66b1dd1bdd70315f32dc6b63160d781b3206b445

--- a/iOS/ChannelPublisher/ChannelPublisher/Localizable.strings
+++ b/iOS/ChannelPublisher/ChannelPublisher/Localizable.strings
@@ -33,4 +33,5 @@
 "PhenixRequestStatusTimeout" = "Timeout error, please try again";
 // Resource is not ready yet, retry
 "PhenixRequestStatusNotReady" = "We are not ready, please retry";
-
+// Rate limited, retry with back-off
+"PhenixRequestStatusRateLimited" = "Rate limited, please try again";
